# mikrotik_traffic_generator

./: .mcp.json  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/analysis/: __init__.py  clustering.py  engine.py  patterns.py  statistics.py
app/core/: models.py  service.py
app/generators/: __init__.py  base.py  manager.py  mikrotik.py  moongen.py  pktgen.py  trex.py
app/gui/: main_window.py  workers.py
app/network/: mikrotik_ssh.py
app/pcap/: parser.py
app/utils/: logging.py
