[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcap-traffic-studio"
version = "2.0.0"
description = "Desktop GUI to analyze PCAP files and generate traffic generator profiles"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "PCAP Traffic Studio Team" }]
dependencies = [
  "PySide6>=6.7.0",
  "scapy>=2.5.0",
  "pyshark>=0.6",
  "paramiko>=3.4.0",
  "pyqtgraph>=0.13.7",
  "matplotlib>=3.9.0",
  "pydantic>=2.8.0",
  "rich>=13.7.0",
  "scikit-learn>=1.5.0",
  "numpy>=2.0.0",
]

[project.scripts]
pcap-traffic-studio = "main:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
disallow_untyped_defs = false
strict_optional = true
exclude = ["profiles/"]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["paramiko"]
ignore_missing_imports = true
follow_untyped_imports = true

[tool.pyinstaller]
name = "pcap-traffic-studio"
onefile = false
windowed = true
